# eeg-nolinear-pipeline

./: .gitignore  README.md  base.py  config.py  logger.py  main.py  pyproject.toml  requirements.txt
classification/: models.py
eeg_nonlinear_pipeline.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
features/: exact_entropy.py  frequency.py  nonlinear.py  nonlinear_analysis.py  rqa_analysis.py
preprocessing/: channel_correction.py  filtering.py  segmentation.py
utils/: fileio.py  find_main_process.py  memory.py  remove_s1_rst.py  timer.py  tqdm_events.py
visualization/: plots.py
