[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eeg-nonlinear-pipeline"
version = "0.1.0"
description = "EEG nonlinear/RQA pipeline"
readme = "README.md"
authors = [{ name = "Tianhao Ning", email = "thning2018@foxmail.com" }]
license = { text = "MIT" }
requires-python = ">=3.9"

[project.scripts]
eeg-pipeline = "main:app"

[tool.setuptools]
py-modules = ["main", "base", "config", "logger"]

[tool.setuptools.packages.find]
where = ["."]
include = ["classification*", "features*", "plots*", "preprocessing*", "storage*", "utils*", "visualization*"]
