[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eeg-nonlinear-pipeline"
version = "0.2.2"
description = "EEG nonlinear/RQA feature extraction pipeline with CLI and GUI integration"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Tianhao Ning" }]
keywords = ["EEG", "pipeline", "RQA", "nonlinear", "microstate"]

[project.scripts]
eeg-pipeline = "main:app"

[project.urls]
Homepage = "https://github.com/TH-yi/eeg-nonlinear-pipeline"
Repository = "https://github.com/TH-yi/eeg-nonlinear-pipeline.git"
Issues = "https://github.com/TH-yi/eeg-nonlinear-pipeline/issues"
Changelog = "https://github.com/TH-yi/eeg-nonlinear-pipeline/releases"

[tool.setuptools]
py-modules = ["main", "base", "config", "logger"]

[tool.setuptools.packages.find]
where = ["."]
include = ["classification*", "features*", "plots*", "preprocessing*", "storage*", "utils*", "visualization*"]
