[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eeg-nonlinear-pipeline"
version = "0.2.2"
description = "EEG nonlinear/RQA feature extraction pipeline with CLI and GUI integration"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Tianhao Ning" }]
keywords = ["EEG", "pipeline", "RQA", "nonlinear", "microstate"]
dependencies = [
        "antropy==0.1.9",
        "certifi==2025.4.26",
        "charset-normalizer==3.4.2",
        "click==8.1.8",
        "colorama==0.4.6",
        "contourpy==1.3.2",
        "cycler==0.12.1",
        "decorator==5.2.1",
        "fonttools==4.58.0",
        "future==1.0.0",
        "h5py==3.13.0",
        "idna==3.10",
        "Jinja2==3.1.6",
        "joblib==1.5.0",
        "kiwisolver==1.4.8",
        "lazy_loader==0.4",
        "llvmlite==0.44.0",
        "Mako==1.3.10",
        "markdown-it-py==3.0.0",
        "MarkupSafe==3.0.2",
        "mat73==0.65",
        "matplotlib==3.10.3",
        "mdurl==0.1.2",
        "mne==1.9.0",
        "nolds==0.6.1",
        "numba==0.61.2",
        "numpy==2.2.6",
        "packaging==25.0",
        "pillow==11.2.1",
        "platformdirs==4.3.8",
        "pooch==1.8.2",
        "psutil==7.0.0",
        "Pygments==2.19.1",
        "pyopencl==2025.1",
        "pyparsing==3.2.3",
        "PyRQA==8.1.0",
        "python-dateutil==2.9.0.post0",
        "pytools==2025.1.5",
        "PyWavelets==1.8.0",
        "requests==2.32.3",
        "rich==14.0.0",
        "scikit-learn==1.6.1",
        "scipy==1.15.3",
        "shellingham==1.5.4",
        "siphash24==1.7",
        "six==1.17.0",
        "threadpoolctl==3.6.0",
        "tqdm==4.67.1",
        "typer==0.15.4",
        "typing_extensions==4.13.2",
        "urllib3==2.4.0"
    ]

[project.scripts]
eeg-pipeline = "main:app"

[project.urls]
Homepage = "https://github.com/TH-yi/eeg-nonlinear-pipeline"
Repository = "https://github.com/TH-yi/eeg-nonlinear-pipeline.git"
Issues = "https://github.com/TH-yi/eeg-nonlinear-pipeline/issues"
Changelog = "https://github.com/TH-yi/eeg-nonlinear-pipeline/releases"

[tool.setuptools]
py-modules = ["main", "base", "config", "logger"]

[tool.setuptools.packages.find]
where = ["."]
include = ["classification*", "features*", "plots*", "preprocessing*", "storage*", "utils*", "visualization*"]
